# OpenADS

./: .editorconfig  .gitattributes  .gitignore  ACE64_API_COMPAT_REPORT.md  ADS_DIALECT_COMPAT.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DOING.md  IMAC_CONNECTION.md  LICENSE  QUICKSTART.md  README.md  TODO.md  bench.cdx  bench500k.dbf  build_windows.bat  openads-studio.bat  openads-studio.sh  openads.ini.sample  release-notes-1.6.5.md  roadmap.txt
bindings/odbc/: CMakeLists.txt  README.md  openads_odbc.cpp  openads_odbc.def
examples/postgresql/: CMakeLists.txt  README.md  main.c
src/: CMakeLists.txt  openads_ace.def  openads_ace_x86.def
src/abi/: ace_exports.cpp  ace_stubs.cpp  backend_registry.cpp  backend_registry.h  backend_table_ops.h  charset.cpp  charset.h  legacy_crt_shims.cpp  openads_sql_c.cpp
src/drivers/: dbf_common.cpp  dbf_common.h  driver_trait.h  index_trait.h  memo_trait.h
src/drivers/adi/: adi_index.cpp  adi_index.h
src/drivers/adm/: adm_memo.cpp  adm_memo.h
src/drivers/adt/: adt_driver.cpp  adt_driver.h
src/drivers/cache/: cached_driver.cpp  cached_driver.h
src/drivers/cdx/: cdx_driver.cpp  cdx_driver.h  cdx_index.cpp  cdx_index.h
src/drivers/fpt/: fpt_memo.cpp  fpt_memo.h
src/drivers/memory/: memory_driver.cpp  memory_driver.h
src/drivers/ntx/: ntx_driver.h  ntx_index.cpp  ntx_index.h
src/engine/: aggregate.cpp  aggregate.h  aof_eval.cpp  aof_eval.h  aof_expr.cpp  aof_expr.h  codepage.cpp  codepage.h  cursor.cpp  cursor.h  data_dict.cpp  data_dict.h  index_expr.cpp  index_expr.h  index_expr_sql.cpp  lock_mgr.cpp  lock_mgr.h  lsn_map.cpp  lsn_map.h  order.h  pbkdf2.cpp  pbkdf2.h  record_crc.h  sha256.cpp  sha256.h  table.cpp  table.h  tx_log.cpp  tx_log.h
src/mgmt/: mg_collector.cpp  mg_collector.h  mg_snapshot.h  mg_stats.h
src/network/: client.cpp  client.h  frame_reader.cpp  frame_reader.h  mg_wire.cpp  remote_index_nav.cpp  remote_index_nav.h  server.cpp  server.h  session.cpp  session.h  socket.h  socket_posix.cpp  socket_win32.cpp  tls_transport.cpp  wire.cpp  wire.h  worker_pool.cpp  worker_pool.h
src/platform/: dll.h  dll_posix.cpp  dll_win32.cpp  file_posix.cpp  file_win32.cpp  lock_posix.cpp  mmap.h  mmap_posix.cpp  mmap_win32.cpp  path.cpp  path.h  thread.cpp  thread.h  time.cpp
src/session/: connection.cpp  connection.h  handle_registry.h
src/sql/: parser.cpp  parser.h
src/sql_backend/: backend_aggregate.h  backend_field_optimizer.h  backend_tx_manager.h  backend_where_builder.h  enterprise_config.cpp  enterprise_config.h  firebird_connection.cpp  firebird_connection.h  firebird_index.h  firebird_table.h  firebird_uri.cpp  firebird_uri.h  maria_backend.cpp  maria_backend.h  maria_connection.cpp  maria_connection.h  maria_index.h  maria_table.h  maria_uri.cpp  maria_uri.h  mssql_connection.cpp  mssql_connection.h  mssql_index.h  mssql_table.cpp  mssql_table.h  mssql_uri.cpp  mssql_uri.h  odbc_backend.cpp  odbc_backend.h  odbc_connection.cpp  odbc_connection.h  odbc_index.h  odbc_table.h  odbc_uri.cpp  odbc_uri.h  oracle_uri.cpp  oracle_uri.h  postgres_backend.cpp  postgres_backend.h  postgres_connection.cpp  (+25 more)
src/util/: result.h  span.h
tests/: CMakeLists.txt
tests/bench/: dbf_cdx_bench.cpp  remote_bench.cpp  remote_test.cpp
tests/fixtures/adi/: attachments.adt  auditlog.adt  contractors.adt  (+17 more)
tests/harbour_smoke/: README.md  build.cmd  make_cdx.cpp  run_build.bat  smoke.prg
tests/tools/: _check_rows.php  _drop_bad.php  check_add_binary.py  check_auditlog.php  check_catcodes.php  check_pt.php  check_pt2.php  check_pt3.php  check_pt4.php  check_sap_procs.php  check_sap_procs2.php  check_trig_body.php  check_trig_result.php  cleanup_test.php  daweb_aof_validate_test.php  daweb_api_validate_test.php  daweb_path_containment_test.php  daweb_row_field_test.php  debug_timing.php  dump_json_triggers.php  dump_perm_records.cpp  dump_trigger_rec.php  dump_user_records.cpp  fix_add_triggers.py  fix_trigger_timing.py  generate_adi_fixtures.cpp  get_sap_triggers.php  probe_adi_recno.php  read_sap_proc.py  rebuild_customer_cdx.cpp  sap_block_crack.cpp  sap_builtin_probe.cpp  sap_full_membership.cpp  sap_groups_probe.cpp  sap_perm_probe.cpp  sap_trig_timing.py  sap_user_prop_probe.cpp  setup_simple_trigger.php  test_adi_fix.php  test_adi_open.php  (+42 more)
tests/unit/: abi_adi_create_test.cpp  abi_adi_multilevel_build_test.cpp  abi_adi_separate_bag_test.cpp  abi_adi_smoke_test.cpp  abi_adi_types_test.cpp  abi_adt_create_test.cpp  abi_adt_scope_validation_test.cpp  abi_adt_smoke_test.cpp  abi_adt_sql_test.cpp  abi_aep_test.cpp  abi_aggregate_postgres_test.cpp  abi_aggregate_sqlite_test.cpp  abi_aggregate_test.cpp  abi_aof_test.cpp  abi_binary_memo_test.cpp  abi_cdx_char_keylen_test.cpp  abi_cdx_conditional_index_test.cpp  abi_cdx_empty_table_keylen_test.cpp  abi_cdx_expr_index_scale_test.cpp  abi_cdx_index_direction_test.cpp  abi_cdx_recreate_tag_diff_expr_test.cpp  abi_cdx_tag_order_test.cpp  abi_collation_codepage_test.cpp  abi_cond_refilter_no_close_test.cpp  abi_conditional_index_nav_test.cpp  abi_conditional_index_refilter_test.cpp  abi_create_index61_test.cpp  abi_create_table_test.cpp  abi_custom_key_test.cpp  abi_dd_auth_test.cpp  abi_dd_crud_test.cpp  abi_dd_invoicing_test.cpp  abi_dd_perms_test.cpp  abi_dd_persistence_test.cpp  abi_dd_proc_view_test.cpp  abi_dd_ri_test.cpp  abi_dd_table_prop_test.cpp  abi_dd_test.cpp  abi_dd_trigger_fire_test.cpp  abi_dd_user_prop_test.cpp  (+167 more)
tests/wilson/: EJEC1X.ntx  EJEC2X.NTX  README.md  build.cmd  ejecutiv.dbf  test_open_ads_adsntx.hbp  test_open_ads_adsntx.prg
tests/xpp/: README.es.md  README.md  README.pt.md  run.sh  test_ads.prg
tools/import_dd/: CMakeLists.txt  README.md  main.cpp
tools/openmonitor/: Cargo.toml  README.md  build.bat
tools/serverd/: CMakeLists.txt  config_ini.cpp  config_ini.h  http_server.cpp  main.cpp  setup_wizard.cpp  setup_wizard.h  spa_index.h
tools/stress/: CMakeLists.txt  README.md  concurrency_main.cpp  daily_ops_main.cpp  main.cpp  memo_main.cpp  memo_zip_main.cpp  remote_concurrency_main.cpp  remote_random_main.cpp
(+963 files in other folders)
